# agentropic-patterns

./: Cargo.toml  README.md
examples/: blackboard_example.rs  coalition_example.rs  hierarchy_example.rs  market_example.rs  swarm_example.rs
src/: prelude.rs
src/blackboard/: blackboard.rs  mod.rs
src/coalition/: coalition.rs  formation.rs  mod.rs  strategy.rs
src/federation/: mod.rs
src/hierarchy/: delegation.rs  level.rs
src/holarchy/: holon.rs
src/market/: allocation.rs  auction.rs  bid.rs  market.rs  mod.rs
src/swarm/: behavior.rs  consensus.rs  flocking.rs  foraging.rs  mod.rs  swarm.rs
src/team/: coordination.rs  mod.rs  role.rs  team.rs
tests/: coalition_tests.rs  hierarchy_tests.rs  market_tests.rs  swarm_tests.rs
